--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,13 @@ sudo: required
 
 install:
     - pip install flake8
+    - pip install coveralls
 
 before_script:
     - flake8 codigo_avulso_test_tutorial
 
 script:
-    - python setup.py test
+    - coverage run --source=codigo_avulso_test_tutorial setup.py test
+    
+after_success:
+    - coveralls
